fix(cors): register CorsFilter as very first filter in SecurityFilterChain and set wildcard allowedOriginPatterns
- SecurityConfig: Explicitly added CorsFilter Bean at front of SecurityFilterChain before RateLimitingFilter and JwtAuthenticationFilter
- SecurityConfig: Configured setAllowedOriginPatterns(List.of('*')) with allowCredentials(true)